fixed dropdown horizontal scroll bug

--- a/scss/inputs/dropdown.scss
+++ b/scss/inputs/dropdown.scss
@@ -154,11 +154,10 @@ div.dropdown {
                 > div {
                     background-color: white;
                     cursor: default;
-                    pointer-events: none;
 
                     > svg {
                         fill: $success;
-                        opacity: 1;
+                        opacity: 1 !important;
                     }
                 }
             }
